# City-Relocation-Ranking-System

./: .gitignore  CMakeLists.txt  README.md  main.cpp
API/: main.py
include/: UI.h  city.h  city_builder.h  country.h  i_data_analysis.h  i_data_collector.h  i_db_manager.h  language_analysis.h  language_data_collector.h  life_quality_analysis.h  life_quality_data_collector.h  postgres_db_manager.h  statistics_analyzer.h  weather_analysis.h  weather_data_collector.h
src/: UI.cpp  city_builder.cpp  country.cpp  i_data_collector.cpp  language_analysis.cpp  language_data_collector.cpp  life_quality_data_collector.cpp  postgres_db_manager.cpp  statistics_analyzer.cpp  weather_analysis.cpp  weather_data_collector.cpp
tests/: test_builder.cpp  test_coord_from_name.cpp  test_language_analysis.cpp  test_postgres.cpp  test_weather_analysis.cpp  test_weather_data_collector.cpp
